# isuckat_trading_so_i_made_a_bot

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  plan.md
.github/workflows/: ci.yml
brain/: Dockerfile  brain.py  pyproject.toml
brain/tests/: test_brain.py
brain/ui/: index.html  main.js
collector/: .dockerignore  Dockerfile  collector.py  pyproject.toml
collector/tests/: test_collector.py
database/: init.sql  logs.md
docs/: apis.md
trader/: Dockerfile  package.json  tsconfig.json
trader/src/: index.ts
trader/tests/: index.test.ts
